--- a/databases/models_list_displaying/templates/books/books_list.html
+++ b/databases/models_list_displaying/templates/books/books_list.html
@@ -8,16 +8,17 @@
             <h1><a href="/books">Каталог</a></h1>
         </div>
         <div class="row">
+            {% for book in books %}
             <div class="book col-md-4">
-                <h2>Сияние</h2>
-                <p>Автор: Стивен Кинг</p>
-                <p>Дата публикации: 2018-09-10</p>
+                <h2>{{ book.name }}</h2>
+                <p>Автор: {{ book.author }}</p>
+                <p>Дата публикации: {{ book.pub_date|date:"Y-m-d" }}</p>
             </div>
-            <div class="book col-md-4">
-                <h2>1984</h2>
-                <p>Автор: Джордж Оруэл</p>
-                <p>Дата публикации: 2015-03-11</p>
-            </div>
+            {%endfor%}
         </div>
+
+        {% if prev_page %}<a class="button button-primary" href="{{ prev_page.url }}">{{ prev_page.pub_date }}</a>{% endif %}
+        <a class="button disabled" href="">{{ current_page|date:"Y-m-d" }}</a>
+        {% if next_page %}<a class="button button-primary" href="{{ next_page.url }}">{{ next_page.pub_date }}</a>{% endif %}
     </div>
 {% endblock %}
